--- a/scss/index.html
+++ b/scss/index.html
@@ -8,13 +8,23 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-   <!-- <h1> <a href="#">Hello APS</a> </h1> -->
-   
-  <h1>This is an h1</h1>
-  <a href="#">this is an anchor tag</a>
-  <p class="error">this is an error</p>
-  <p class="notification">this is a notification</p>
-  <button>click me</button>
+  <!--colors-->
 
+  <!--font sizes-->
+
+  <!--buttons-->
+
+  <!--cards-->
+  <h2>Cards</h2>
+  <article class="card">
+    <h1 class="card-title">This is acard title</h1>
+    <p class="card-body">Lorem ipsum dolor, sit amet <a href="#">consectetur</a> consectetur adipisicing elit. Vitae id debitis dicta explicabo! Inventore optio consequuntur aut pariatur et non.</p>
+
+  </article>
+
+  <!--grid system-->
+
+
+  <!--utilities-->
 </body>
 </html>
